Fixed a broken link

--- a/public/project.json
+++ b/public/project.json
@@ -120,7 +120,7 @@
         "Project Name": "Coin Flipper",
         "Project Type": "Coin Flipping Simulator",
         "Description": "An online coin flipping tool for simulating random coin tosses, commonly used for decision-making purposes.",
-        "Live Link": "https://coin-flipper-md-mamun.netlify.app/",
+        "Live Link": "https://coin-flipper-mk.netlify.app/",
         "Thumbnail URL": "https://i.ibb.co/0rTh5QC/coin.png",
         "Source Code": "https://github.com/MamunKhan71/JavaScript-MiniProject/tree/main/coin%20flipper",
         "Project ID": "CF-013"
