--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "daisyui": "^4.12.2",
+    "form-data": "^4.0.0",
     "framer-motion": "^11.2.11",
     "lottie-react": "^2.4.0",
+    "mailgun.js": "^10.2.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
